Testing CSS implementation - header to black

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,5 +6,5 @@
   "minima/initialize";
 
 header {
-    background-image: linear-gradient(black, grey);
+    background-image: linear-gradient(black, grey) !important;
 }
