--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,6 @@
 /*Test*/
 @import 
-  "minima/skins/{{ site.minima.skin | default: 'classic' }}","minima/initialize";
+  "minima/skins/{{ site.minima.skin | default: 'classic' }}","minima/initialize", "{{ site.theme }}";
 /*{ expectedscss(css-lcurlyexpected)*/
 
 
